Referenced index.js and jquery file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
 	<head>
+	 <script src="jquery/jquery-2.1.1.js"></script>
+     <script src="jquery/jquery-ui-1.10.4.js"></script>
+	 <script src="cordova.js"></script>
+     <script src="index.js"></script>
 	</head>
 	<body>
 	 <div id="app-status-ul">
-	 <div>
-	 </div>
+	 
 	  </div>
+		<div id="deviceId">
+		</div>
 	</body>
 </html>
